; ModuleID = '/home/carl/AnghaBench/linux/fs/fuse/extr_dev.c_fuse_request_init.c'
source_filename = "/home/carl/AnghaBench/linux/fs/fuse/extr_dev.c_fuse_request_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fuse_req = type { i32, i32, i32, i32, i32 }

@FR_PENDING = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.fuse_req*)* @fuse_request_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fuse_request_init(%struct.fuse_req* %0) #0 {
  %2 = alloca %struct.fuse_req*, align 8
  store %struct.fuse_req* %0, %struct.fuse_req** %2, align 8
  %3 = load %struct.fuse_req*, %struct.fuse_req** %2, align 8
  %4 = getelementptr inbounds %struct.fuse_req, %struct.fuse_req* %3, i32 0, i32 4
  %5 = call i32 @INIT_LIST_HEAD(i32* %4)
  %6 = load %struct.fuse_req*, %struct.fuse_req** %2, align 8
  %7 = getelementptr inbounds %struct.fuse_req, %struct.fuse_req* %6, i32 0, i32 3
  %8 = call i32 @INIT_LIST_HEAD(i32* %7)
  %9 = load %struct.fuse_req*, %struct.fuse_req** %2, align 8
  %10 = getelementptr inbounds %struct.fuse_req, %struct.fuse_req* %9, i32 0, i32 2
  %11 = call i32 @init_waitqueue_head(i32* %10)
  %12 = load %struct.fuse_req*, %struct.fuse_req** %2, align 8
  %13 = getelementptr inbounds %struct.fuse_req, %struct.fuse_req* %12, i32 0, i32 1
  %14 = call i32 @refcount_set(i32* %13, i32 1)
  %15 = load i32, i32* @FR_PENDING, align 4
  %16 = load %struct.fuse_req*, %struct.fuse_req** %2, align 8
  %17 = getelementptr inbounds %struct.fuse_req, %struct.fuse_req* %16, i32 0, i32 0
  %18 = call i32 @__set_bit(i32 %15, i32* %17)
  ret void
}

declare dso_local i32 @INIT_LIST_HEAD(i32*) #1

declare dso_local i32 @init_waitqueue_head(i32*) #1

declare dso_local i32 @refcount_set(i32*, i32) #1

declare dso_local i32 @__set_bit(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
